# universal-verifier-hypergraph

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt
api/: __init__.py  dependencies.py  main.py  models.py
api/routers/: execute.py  graph.py  ontology.py  packs.py  protocols.py  routing.py
axiom_router/: __init__.py  axiom_pack.py  exporter.py  hypergraph.py  loader.py  utils.py
backend/: pyproject.toml
backend/src/api/: main.py  schemas.py
backend/src/hypergraph/: hyperedges.py
backend/src/kernel/: certgen.py  conflicts.py  seed.py  store.py
backend/src/ontology/: normalize.py  registry.py
config/: axiom_packs.yaml  clinical_protocols.yaml
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: api-client.js  app.js  graph-renderer.js  playground-controls.js  resize-handler.js  update-composition.js
frontend/: index.html  package-lock.json  package.json
frontend/css/: style.css
frontend/js/: graph-renderer.js
ontology/: __init__.py  bridge.py  dependencies.py  loader.py  registry.py  schema.py  types.py
playground/: index.html
protocol_router/: __init__.py  loader.py  utils.py
protocols/: __init__.py  dependencies.py  exporter.py  loader.py  protocol.py  router.py  utils.py
tests/: test_api.py  test_router.py
verification/: README.md  __init__.py  base_verifier.py  certificate.py  certificate_generator.py  lean_executor.py  proof_execution.py  protocol_proofs.py  verifier.py
verifiers/: README.md  __init__.py  lean_executor.py  lean_translator.py
(+67 files in other folders)
